# dynamic-wallpaper-editor

./: CONTRIBUTING.md  README.md  TODO.md  com.github.maoschanz.Dynamic-Wallpaper-Editor.json  com.github.maoschanz.DynamicWallpaperEditor.json  meson.build  org.gnome.Dynamic-Wallpaper-Editor.json  org.gnome.Dynamic-Wallpaper-Editor.json~  update-translations.sh
_.git/: config
data/: com.github.maoschanz.Dynamic-Wallpaper-Editor.appdata.xml.in  com.github.maoschanz.Dynamic-Wallpaper-Editor.desktop.in  com.github.maoschanz.Dynamic-Wallpaper-Editor.gschema.xml  com.github.maoschanz.DynamicWallpaperEditor.appdata.xml.in  com.github.maoschanz.DynamicWallpaperEditor.desktop.in  com.github.maoschanz.DynamicWallpaperEditor.gschema.xml  meson.build  org.gnome.Dynamic-Wallpaper-Editor.appdata.xml.in  org.gnome.Dynamic-Wallpaper-Editor.desktop.in  org.gnome.Dynamic-Wallpaper-Editor.gschema.xml
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  install  rules
help/: LINGUAS  meson.build
po/: LINGUAS  POTFILES  (+12 more)
src/: Appmenu.ui  __init__.py  appmenu.ui  data_model.py  dynamic-wallpaper-editor.gresource.xml  dynamic-wallpaper-editor.in  gi_composites.py  main.py  menus.ui  meson.build  misc.py  picture_row.py  picture_row.ui  picture_widget.py  preview.py  shortcuts.ui  start_time.ui  time_selector_popup.py  view.py  window.py  window.ui
src/ui/: dynamic-wallpaper-editor.gresource.xml  menus.ui  picture_menu.ui  picture_row.ui  picture_thumbnail.ui  preview.ui  shortcuts.ui  start_time.ui  time_selector_popup.ui  window.ui
(+6 files in other folders)
